Move the navigation farther off screen. Fixes and closes #149.
Tough to see if I got it for sure.

--- a/wdn/templates_3.0/css/variations/mobile.css
+++ b/wdn/templates_3.0/css/variations/mobile.css
@@ -167,7 +167,7 @@ body.mobile #navigation.disabled {
 }
 body.mobile #navigation ul {
 	position:absolute;
-	left:100%;
+	left:110%;
 	top:100%;
 	width:100%;
 	text-align:left;
